# serum-dex

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
crank/: Cargo.toml
crank/src/: main.rs
safe/cli/: Cargo.toml
safe/cli/src/: main.rs
safe/client/: Cargo.toml
safe/client/src/: lib.rs
safe/program/: Cargo.toml
safe/program/interface/: Cargo.toml
safe/program/interface/src/: lib.rs
safe/program/src/: instruction.rs  lib.rs
solana-client-gen/: Cargo.toml
solana-client-gen/src/: lib.rs
