[package]
name = "serum_safe"
version = "0.1.0"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_safe"

[features]
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
client = ["solana-sdk/default", "spl-token/default"]
test = ["solana-sdk/default"]
default = []

[dependencies]
serum_safe_interface = { path = "./interface" }
solana-sdk = { version = "=1.3.9", default-features = false }
spl-token = { version = "=2.0.3", default-features = false }

[profile.release]
lto = true

[profile.test]
opt-level = 2
