[package]
name = "serum_safe_interface"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
program = ["solana-sdk/program"]
client = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.9", default-features = false }
solana-client-gen = { path = "../../../solana-client-gen" }